# HealMe

./: .env.example  .gitignore  AGENTS.md  APPSTORE-LISTING.md  APPSTORE.md  CLAUDE.md  CONNECTORS.md  DEPLOYMENT.md  FHIR-MAPPING.md  LICENSE  Makefile  ONBOARDING.md  README.md  TODO.md  codex.md
.claude/: launch.json
.github/workflows/: ci.yml
ai-service/: Dockerfile  pyproject.toml  requirements.txt
ai-service/app/: ai_settings.py  apns.py  assistant.py  auth.py  config.py  export.py  fhir_consts.py  health_review.py  importers.py  ingest.py  keystore.py  main.py  medplum.py  pdfgen.py  providers.py  push.py  (+2 more)
backend-bots/: medplum.config.json  package-lock.json  package.json  tsconfig.json
docs/: ARCHITECTURE-DIAGRAMS.md  privacy.html
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  postcss.config.mjs  vite.config.ts
infra/: Caddyfile  docker-compose.app.yml  docker-compose.cloud.yml  docker-compose.yml
ios/: .gitignore  .swiftformat  .swiftlint.yml  ExportOptions.plist  README.md  Signing.xcconfig.example  project.yml
personal-health-record-system 2/: README.md
pi-dispenser/: .gitignore  README.md  pyproject.toml
pi-dispenser/pi_dispenser/: __init__.py  __main__.py  agent.py  cli.py  client.py  consts.py  events.py  hal.py  ladder.py  schedule.py
pi-dispenser/scenarios/: day.json
pi-dispenser/systemd/: pi-dispenser.service
pi-dispenser/tests/: conftest.py  fixtures.py  test_events.py  test_ladder.py  test_schedule.py  test_sim_e2e.py
scripts/: backup.py  bootstrap.py  care_circle.py  deploy_bots.py  deploy_demo_vm.sh  rotate_superadmin.py  seed.py  smoke_test.py
(+147 files in other folders)
