[project]
name = "pi-dispenser"
version = "0.1.0"
description = "HealMeDaily Raspberry Pi pill-dispenser agent (Phase 8) - simulator-first"
requires-python = ">=3.12"
dependencies = ["httpx"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pi_dispenser"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
